--- a/ContactUs.html
+++ b/ContactUs.html
@@ -11,9 +11,9 @@
     />
   </head>
   <body>
+    <!-- Header -->
     <section id="header">
-      <a href="#"><img src="Image/logo.png" alt="logo" /> </a>
-
+      <a href="#"><img src="Image/logo.png" alt="logo" /></a>
       <div>
         <ul id="navbar">
           <li><a href="/index.html">Home</a></li>
@@ -33,17 +33,19 @@
       </div>
     </section>
 
+    <!-- Page Header -->
     <section id="page-header" class="about-header">
       <h2>#let's_talk</h2>
       <p>LEAVE A MESSAGE, We love to hear from you!</p>
     </section>
 
+    <!-- Contact Details -->
     <section id="contact-details" class="section-p1">
       <div class="details">
         <span>GET IN TOUCH</span>
         <h2>Visit one of our agency locations or contact us today</h2>
         <h3>Head Office</h3>
-        <div>
+        <ul>
           <li>
             <i class="fa-solid fa-map"></i>
             <p>562 Wellington Road, Street 32, San Francisco</p>
@@ -58,9 +60,9 @@
           </li>
           <li>
             <i class="fa-solid fa-clock"></i>
-            <p>Monday to Saturday: 9.00am to 16.pm</p>
+            <p>Monday to Saturday: 9.00am to 4.00pm</p>
           </li>
-        </div>
+        </ul>
       </div>
 
       <div class="map">
@@ -75,6 +77,7 @@
       </div>
     </section>
 
+    <!-- Contact Form -->
     <section id="form-details" class="section-p1">
       <form id="contact-form">
         <span>LEAVE A MESSAGE</span>
@@ -82,38 +85,45 @@
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="E-mail" required />
         <input type="text" name="subject" placeholder="Subject" required />
-        <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
-        <button class="normal">Submit</button>
+        <textarea
+          name="message"
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+          required
+        ></textarea>
+        <button class="normal" type="submit">Submit</button>
       </form>
 
-      <div class="people">
-        <div>
-          <img src="Image/people/1.png" alt="" />
+      <div class="people-list">
+        <div class="people">
+          <img src="/Image/people/1.jpg" alt="John Doe" />
           <p>
-            <span>John Doe</span> Senior Marketing Manager <br />
-            Phone: + 000 123 000 77 88 <br />
-            Email: contact@example.com
+            <span>Nizam Uddin Shuvo</span> CEO <br />
+            Phone: +880 16001446594 <br />
+            Email: nizamshuvo594@gamil.com
           </p>
         </div>
-        <div>
-          <img src="Image/people/2.png" alt="" />
+        <div class="people">
+          <img src="/Image/people/2.jpeg" alt="William Smith" />
           <p>
-            <span>William Smith</span> Senior Marketing Manager <br />
-            Phone: + 000 123 000 77 88 <br />
-            Email: contact@example.com
+            <span>Umme habiba Islam Rupa</span> Manager <br />
+            Phone: +880 1587638976 <br />
+            Email: rupa0710@gamil.com
           </p>
         </div>
-        <div>
-          <img src="Image/people/3.png" alt="" />
+        <div class="people">
+          <img src="/Image/people/3.jpg" alt="Emma Stone" />
           <p>
-            <span>Emma Stone</span> Senior Marketing Manager <br />
-            Phone: + 000 123 000 77 88 <br />
-            Email: contact@example.com
+            <span>Rushu</span> Senior Marketing Manager <br />
+            Phone: +880 1786877487 <br />
+            Email: rushu2019@gamil.com
           </p>
         </div>
       </div>
     </section>
 
+    <!-- Newsletter -->
     <section id="newsletter" class="section-p1 section-m1">
       <div class="newstext">
         <h4>Sign Up For Newsletters</h4>
@@ -122,7 +132,6 @@
           <span>special offers.</span>
         </p>
       </div>
-
       <div class="form">
         <form id="newsletter-form">
           <input type="email" placeholder="Your email address" required />
@@ -131,13 +140,17 @@
       </div>
     </section>
 
+    <!-- Footer -->
     <footer class="section-p1">
       <div class="col">
-        <img class="logo" src="Image/logo.png" alt="cara online shop" />
+        <img class="logo" src="Image/logo.png" alt="RuShu Logo" />
         <h4>Contact</h4>
-        <p><strong>Address: </strong> 562 Wellington Road, Street 32, San Francisco</p>
-        <p><strong>Phone: </strong> +01 2222 365 /(+91) 01 2345 6789</p>
-        <p><strong>Hours: </strong> 10:00 - 18:00, Mon - Sat</p>
+        <p>
+          <strong>Address:</strong> 562 Wellington Road, Street 32, San
+          Francisco
+        </p>
+        <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
+        <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
         <div class="follow">
           <h4>Follow Us</h4>
           <div class="icon">
@@ -149,6 +162,7 @@
           </div>
         </div>
       </div>
+
       <div class="col">
         <h4>About</h4>
         <a href="#">About Us</a>
@@ -171,17 +185,26 @@
         <h4>Install App</h4>
         <p>From App Store or Google Play</p>
         <div class="row">
-          <img src="Image/pay/app.jpg" alt="" />
-          <img src="Image/pay/play.jpg" alt="" />
+          <img src="Image/pay/app.jpg" alt="App Store" />
+          <img src="Image/pay/play.jpg" alt="Google Play" />
         </div>
         <p>Secured Payment Gateways</p>
-        <img src="Image/pay/pay.png" alt="" />
+        <img src="Image/pay/pay.png" alt="Payment" />
       </div>
+
       <div class="copyright">
         <p>© 2024, RuShu - HTML CSS Ecommerce Template</p>
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Script for Form Submission -->
+    <script>
+      document
+        .getElementById("contact-form")
+        .addEventListener("submit", function (e) {
+          e.preventDefault();
+          alert("Thank you! Your message has been submitted.");
+        });
+    </script>
   </body>
 </html>
